# bitbucket-manager

./: .env.example  .gitignore  .replit  AGENTS.md  CHANGELOG.md  README.md  install.sh  pyproject.toml  replit.md  repository_manager.py  serve.py
.github/workflows/: ci.yml
Formula/: bitbucket-manager.rb
src/bbm/: __main__.py  api.py  archiving.py  cli.py  config.py  deps.py  migration.py  pr_approval.py
src/bbm/tui/: __init__.py  archive_screen.py  dashboard_screen.py  deps_screen.py  explorer.py  home.py  migration_screen.py  permissions_screen.py  pr_screen.py  splash.py  styles.tcss
